test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST__api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 06 May 2025 09:24:36 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="I3/jzEaVv38EcDmbmsaoe6FuKO/G1+uG", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 6

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}